# alx-backend-python

./: README.md
0x03-Unittests_and_integration_tests/: README.md  client.py  test_client.py  test_utils.py  utils.py
Django-Middleware-0x03/: asgi.py  settings.py  urls.py  wsgi.py
Django-Middleware-0x03/chats/: middleware.py  views.py
Django-signals_orm-0x04/: README.md  manage.py  requirements.txt  settings.py
Django-signals_orm-0x04/messaging/: apps.py  managers.py  models.py  signals.py  urls.py  views.py
Django-signals_orm-0x04/messaging_app/: settings.py  urls.py
alx_travel_app_0x01/: .env  README.md  pyproject.toml  requirements.txt
alx_travel_app_0x01/alx_travel_app/: settings.py  urls.py
alx_travel_app_0x01/alx_travel_app/alx_travel_app/: README.md  requirement.txt  settings.py  urls.py
alx_travel_app_0x01/alx_travel_app/listings/: views.py
alx_travel_app_0x01/listings/: apps.py  models.py  urls.py  views.py
messaging_app/: Dockerfile  blue_deployment.yaml  commands.txt  docker-compose.yml  kubctl-0x-03  kubctl-0x02  kubctl-0x03  kubeservice.yaml  manage.py  post_man-Collections  post_man-Collections.json  requirements.txt
messaging_app/chats/: auth.py  filters.py  models.py  pagination.py  (+4 more)
python-context-async-perations-0x02/: 0-databaseconnection.py  1-execute.py  3-concurrent.py
python-decorators-0x01/: 0-log_queries.py  1-with_db_connection.py  2-transactional.py  3-retry_on_failure.py  4-cache_query.py
python-generators-0x00/: 0-stream_users.py  1-batch_processing.py  2-lazy_paginate.py  4-stream_ages.py  README.md  seed.py
(+19 files in other folders)
