[project]
name = "alx-travel-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.0",
    "drf-yasg>=1.21.10",
    "faker>=37.4.2",
    "mysqlclient>=2.2.7",
]
